fixed overflow-x on webpage

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 @charset "UTF-8";
 .u-tal {
   text-align: left !important;
